--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
         "react-moment": "^1.1.3",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.2",
-        "react-scripts": "5.0.1",
+        "react-scripts": "^2.1.3",
         "react-scroll-to-bottom": "^4.2.0",
         "react-time-picker": "^5.2.0",
         "recharts": "^2.5.0",
         "redux": "^4.2.1",
         "redux-persist": "^6.0.0",
         "socket.io-client": "^4.6.1",
-        "sweetalert2": "^11.7.3",
+        "sweetalert2": "^11.4.8",
         "sweetalert2-react-content": "^5.0.7",
         "web-vitals": "^2.1.4"
     },
