--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.3.4",
+        "babel-preset-react": "^6.24.1",
         "bootstrap": "^5.2.3",
         "country-state-city": "^3.1.2",
         "emoji-picker-react": "^4.4.8",
@@ -25,7 +26,7 @@
         "react-moment": "^1.1.3",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.2",
-        "react-scripts": "^2.1.3",
+        "react-scripts": "^5.0.1",
         "react-scroll-to-bottom": "^4.2.0",
         "react-time-picker": "^5.2.0",
         "recharts": "^2.5.0",
